force-app/main/default/objects/Usuario_Empresa_Temporal__c/Usuario_Empresa_Temporal__c.object-meta.xml
<CustomObject>
    <label>Usuario Empresa Temporal</label>
    <nameField>
        <label>Nombre de Usuario Empresa Temporal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuario Empresa Temporal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>