force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Aceptar_Planilla__c.field-meta.xml
<CustomField>
    <fullName>Aceptar_Planilla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aceptar Planilla</label>
    <type>Checkbox</type>
</CustomField>