force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Aprobacion_Usuarios__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Usuarios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobacion_Usuarios</label>
    <type>Checkbox</type>
</CustomField>