force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Calculo_De_Pilares__c.field-meta.xml
<CustomField>
    <fullName>Calculo_De_Pilares__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculo De Pilares</label>
    <type>Checkbox</type>
</CustomField>