force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Empresa2__c.field-meta.xml
<CustomField>
    <fullName>Empresa2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Usuario_Empresa_Temporal</relationshipName>
    <type>Lookup</type>
</CustomField>