force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>