force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Modificado__c.field-meta.xml
<CustomField>
    <fullName>Modificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificado</label>
    <type>Checkbox</type>
</CustomField>