force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Nuevo_Personal__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuevo Personal</label>
    <type>Checkbox</type>
</CustomField>