force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Nuevos_Salarios__c.field-meta.xml
<CustomField>
    <fullName>Nuevos_Salarios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nuevos Salarios</label>
    <type>Checkbox</type>
</CustomField>