force-app/main/default/objects/Usuario_Empresa_Temporal__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Temporal</label>
    <referenceTo>Usuario_Temporal__c</referenceTo>
    <relationshipName>Usuario_Empresa_Temporal</relationshipName>
    <type>Lookup</type>
</CustomField>